--- a/style.css
+++ b/style.css
@@ -1,34 +1,86 @@
-.firstBox {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-}
-
-.secondBox {
-  width: 300px;
-  height: 400px;
-  outline-color: red;
-  background-color: blue;  
-}
-.thirdBox {
-  width:250px;
-  height:600px;
-  background-color:green;
-}
-.fourthBox {
-  text-align: center;
-  width :400px;
-  color:white;
-  
-  
-}
-.fifthBox {
-  text-align: right;
-  width:800px;
-  color: orange;
-}
 body {
-  background-color: purple;
+	margin: 0;
+	background: grey;
 }
 
+.container {
+	width: 100%;
+	margin: 0 auto;
+  height: 80px;
+  border: 2px solid;
+  border: red;
+  box-shadow: 8px 1px;
+  
+}
 
+header {
+  background: white;
+  border-bottom: 1px solid black;
+ 
+}
+.box {
+  Background-color: black;
+  height: 80px;
+  width: 80px;
+  position: fixed;
+  z-index: 6;
+  top: 0px;
+  left: 1800px;
+  
+  
+  
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  background-color: white;
+  color: black;
+  text-align: center;
+  border-top: 2px solid black;
+}
+.content {
+  height: 800px;
+  width:100%
+  background-color:grey;
+  position: fixed;
+}
+.box1 {
+  height:200px;
+  width:200px;
+  background:white;
+  margin: 20px;
+  
+}
+.box2 {
+  height:200px;
+  width:200px;
+  background:white;
+  margin: 20px;
+  position:fixed;
+  left: 300px;
+  top: 81.5px;
+  
+}
+.box3 {
+  height:200px;
+  width:200px;
+  background:white;
+  margin: 20px;
+  position:fixed;
+  left: 600px;
+  top: 81.5px;
+  
+}
+.box4 {
+  height:200px;
+  width:200px;
+  background:white;
+  margin: 20px;
+  position:fixed;
+  left: 900px;
+  top: 81.5px;
+  
+}
